--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 <br><br><br>
 <center>
 <div class="social">
-  <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-  <a href="#"><i class="fa-brands fa-github"></i></a>
+  <a href="www.linkedin.com/in/keshav-agarwal-b5874b257"><i class="fa-brands fa-linkedin"></i></a>
+  <a href="https://github.com/keshav-github02"><i class="fa-brands fa-github"></i></a>
 </center>
 </div>
 <center><button  onclick="openWin()" class="btn">Expectations VS Reality</button></center>
