--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <br><br><br>
 <center>
 <div class="social">
-  <a href="www.linkedin.com/in/keshav-agarwal-b5874b257"><i class="fa-brands fa-linkedin"></i></a>
+  <a href="https://www.linkedin.com/in/keshav-agarwal-b5874b257/"><i class="fa-brands fa-linkedin"></i></a>
   <a href="https://github.com/keshav-github02"><i class="fa-brands fa-github"></i></a>
 </center>
 </div>
